Null pointer dereference segfault in mongo shell

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.1.2
    • Affects Version/s: 2.1.1
    • Component/s: Shell
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Reproduction, by asya:

      $ ./mongo
      > <ctl-s>
      hit down arrow
      (i-search)`': Sun Jun 10 14:54:24 mongo got signal 11 (Segmentation fault: 11), stack trace
      

      Coverity output:

      Null pointer dereferences
      A null pointer dereference will occur.
      Dereference of an explicit null value
      
      Defect 10069 (STATIC_C)
        Checker FORWARD_NULL (subcategory deref_constant_null)
        File /src/mongo/shell/linenoise.cpp
        Function InputBuffer::incrementalHistorySearch(PromptBase &, int)
          /src/mongo/shell/linenoise.cpp, line: 1640
          Assigning: "activeHistoryLine" = "NULL".
              UChar32* activeHistoryLine = 0;
      

            Assignee:
            Tad Marshall
            Reporter:
            Andy Schwerin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: