SERVER-6061 don't use zeroed activeHistoryLine

Handle case of exiting history search with arrow key when no
search has been done yet.